--- a/forum/config/locales/fms.cs.yml
+++ b/forum/config/locales/fms.cs.yml
@@ -98,3 +98,7 @@ cs:
     comment_notification_inform: Budete automaticky dostávat oznámení jakýchkoli budoucích komentářů
     follow: Sledovat
     follow_stop: Přestaňte Po
+    topic_follow_section:
+      title: Follow Topic by Email
+      description: Follow this topic and receive email notifications of new comments
+    
