--- a/forum/config/locales/fms.fi.yml
+++ b/forum/config/locales/fms.fi.yml
@@ -98,3 +98,7 @@ fi:
     comment_notification_inform: Saat automaattisesti ilmoituksen mahdollisista tulevista kommentteja
     follow: Seurata
     follow_stop: Stop Following
+    topic_follow_section:
+      title: Follow Topic by Email
+      description: Follow this topic and receive email notifications of new comments
+    
