--- a/cms/config/locales/cms.en.yml
+++ b/cms/config/locales/cms.en.yml
@@ -21,7 +21,11 @@ en:
     comment_login_required: "Please log in to your account to post a comment. If you do not have a user account, you can create one." 
     comment_notify:
       disclaimer: "You are receiving this email because indicated you wanted to be notified of updates to this blog/forum."
-      
+    blog_follow_section:
+      title: Follow Blog by Email
+      description: Follow this blog and receive email notifications of new posts
+      description_private: This is a private blog - you will automatcially receive email notifications of new posts
+
     contact_form:
       sent: "Thank you, your message was emailed to us."
       send_button: Send Message
