--- a/cms/config/locales/cms.fi.yml
+++ b/cms/config/locales/cms.fi.yml
@@ -21,6 +21,10 @@ fi:
     comment_login_required: "Ole hyvä ja kirjaudu sisään tilillesi kommentoidaksesi. Jos sinulla ei ole käyttäjätiliä, voit luoda sellaisen."
     comment_notify:
       disclaimer: "Sait tämän sähköpostin, koska ilmoitettu halusitte ilmoitetaan päivityksistä tämän blogin / forum."
+    blog_follow_section:
+      title: Follow Blog by Email
+      description: Follow this blog and receive email notifications of new posts
+      description_private: This is a private blog - you will automatcially receive email notifications of new posts
 
     contact_form:
       sent: "Kiitos, kun viestisi on lähetetty sähköpostitse meille."
