--- a/cms/config/locales/cms.ja.yml
+++ b/cms/config/locales/cms.ja.yml
@@ -21,6 +21,10 @@ ja:
     comment_login_required: "コメントを投稿するために、アカウントにログインしてください。 ユーザーアカウントをお持ちでない場合は、1を作成することができます。 "
     comment_notify:
       disclaimer: "示されたこのブログ/フォーラムの最新情報を通知することがしたかったため、このメールを受け取っている。"
+    blog_follow_section:
+      title: Follow Blog by Email
+      description: Follow this blog and receive email notifications of new posts
+      description_private: This is a private blog - you will automatcially receive email notifications of new posts
 
     contact_form:
       sent: "あなたのメッセージは、私たちに電子メールで送信された、ありがとうございます。"
