--- a/cms/config/locales/cms.ja.yml
+++ b/cms/config/locales/cms.ja.yml
@@ -1,6 +1,6 @@
 ja:
   cms:
-    recent_posts: 最近の投稿メッセージ
+    recent_posts: 最近の投稿
     all_recent_posts: 全ての最近の投稿メッセージ
     available_blogs: 利用可能なブログ
     blog_header: ブログ
@@ -22,9 +22,9 @@ ja:
     comment_notify:
       disclaimer: "示されたこのブログ/フォーラムの最新情報を通知することがしたかったため、このメールを受け取っている。"
     blog_follow_section:
-      title: Follow Blog by Email
-      description: Follow this blog and receive email notifications of new posts
-      description_private: This is a private blog - you will automatcially receive email notifications of new posts
+      title: ブログに従ってください
+      description: このブログに従って新しい記事の電子メール通知を受け取る
+      description_private: これは、プライベートブログです - あなたは、自動的に新しい記事の電子メール通知を受信します
 
     contact_form:
       sent: "あなたのメッセージは、私たちに電子メールで送信された、ありがとうございます。"
