update japanese translation

--- a/cms/config/locales/cms.ja.yml
+++ b/cms/config/locales/cms.ja.yml
@@ -22,9 +22,9 @@ ja:
     comment_notify:
       disclaimer: "示されたこのブログ/フォーラムの最新情報を通知することがしたかったため、このメールを受け取っている。"
     blog_follow_section:
-      title: ブログに従ってください
-      description: このブログに従って新しい記事の電子メール通知を受け取る
-      description_private: これは、プライベートブログです - あなたは、自動的に新しい記事の電子メール通知を受信します
+      title: ブログの購読について
+      description: このブログの新しい記事の電子メール通知を受け取るには"購読する"をクリック
+      description_private: これは購読できる方々が限定されている非公開のブログです。あなたは自動的に新しい記事の電子メール通知を受信します。
 
     contact_form:
       sent: "あなたのメッセージは、私たちに電子メールで送信された、ありがとうございます。"
