--- a/event/config/locales/ems.ja.yml
+++ b/event/config/locales/ems.ja.yml
@@ -1,7 +1,7 @@
 ja:
   ems:
     registration_subtitle: 登録
-    register_btn: 登録
+    register_btn: 申し込む
     cancel_btn: キャンセル
     ticket_receipt_arrival: 到着
     ticket_receipt_attendee: 出席者
