--- a/event/config/locales/ems.ja.yml
+++ b/event/config/locales/ems.ja.yml
@@ -35,7 +35,7 @@ ja:
     registration_closed_email: "ご不明な点がある場合は、下記にご連絡下さい %{email}."
     registration_closed_list: 現在、登録して頂けるのは下記の講座です
     choose_payment_method: お支払い方法を選択して下さい
-    donate_button: 寄付する
+    donate_button: 申し込む
     project_goal: Project Goal
     amount_raised: Amount Raised
   activerecord:
