--- a/event/config/locales/ems.cs.yml
+++ b/event/config/locales/ems.cs.yml
@@ -13,12 +13,12 @@ cs:
     ticket_receipt_price: Cena
     ticket_information: Informace o lístku
     ticket_contact: Kontaktní informace
-    ticket_registered_following_event: Jste přihlášen/a na program
-    ticket_outstanding_balance: "Podle naší evidence Vám z kurzovného zbývá zaplatit"
-    ticket_payment_link_leadin: Tuto částku můžete uhradit skrze následující odkaz
-    ticket_payment_link_text: Zaplatit
+    ticket_registered_following_event: byl/a jste přihlášen/a na program:
+    ticket_outstanding_balance: "Podle naší evidence Vám z kurzovného zbývá zaplatit:"
+    ticket_payment_link_leadin: Tuto částku můžete uhradit některým ze způsobů uvedených na následujícím linku
+    ticket_payment_link_text: Způsoby platby
     ticket_payment_reminder_subject: "Připomínka úhrady kurzovného: %{value}"
-    ticket_if_already_paid: "Tento e-mail je automaticky generovaný a poslal náš systém. Pokud jste již zaplatil částku, nebo se domníváte, že připomínka je nesprávná, prosím, pošlete e-mail na %{value}. Pokud jste provedli platbu v posledních třech dnech, ignorujte prosím tuto připomínku. "
+    ticket_if_already_paid: "Tento e-mail byl automaticky generovaný a odeslaný naším systémem. Pokud jste výše uvedenou částku již dříve zaplatil/a, nebo se domníváte, že tato připomínka není oprávněná, zašlete prosím e-mail na info@kaleshwar.cz. Pokud jste platbu provedli v posledních třech dnech, můžete tuto připomínku ignorovat."
     registration_receipt_title: Potvrzení o rezervaci
     registration_email: E-mail
     registration_first_name: Křestní jméno
