we no longer store the previous url on each request.  instead, if we're redirecting to a login page, then store the return location at that time, or handle it being added as a parameter on the url.
This also fixed an issue where on login we might get redirected to
a missing image file or other asset.

--- a/cms/config/locales/cms.cs.yml
+++ b/cms/config/locales/cms.cs.yml
@@ -17,6 +17,7 @@ cs:
     comments_header: Komentáře
     delete: smazat
     comments_stat: Komentáře
+    page_login_required: Login is required to access this page
     blog_login_required: Přihlášení je vyžadováno pro přístup k tomuto blogu
     comment_login_required: "Prosím, přihlaste se ke svému účtu, abyste mohl psát komentář. Pokud nemáte uživatelský účet, můžete si jej vytvořit."
     comment_notify:
