--- a/event/config/locales/ems.en.yml
+++ b/event/config/locales/ems.en.yml
@@ -19,6 +19,7 @@ en:
     ticket_payment_link_text: Make Payment
     ticket_payment_reminder_subject: "Payment Reminder: %{value}"
     ticket_if_already_paid: "This email is automatically generated and sent by our system. If you have already paid the amount, or believe that the reminder is incorrect, please send an email to %{value}. If you have made a payment in the last three days, please ignore this reminder."
+    ticket_payment_complete: Your payment is complete!
     registration_receipt_title: Reservation Receipt
     registration_email: Email
     registration_first_name: First Name
