--- a/event/config/locales/ems.fi.yml
+++ b/event/config/locales/ems.fi.yml
@@ -19,6 +19,7 @@ fi:
     ticket_payment_link_text: Maksa
     ticket_payment_reminder_subject: "Maksumuistutus: %{value}"
     ticket_if_already_paid: "Tämä sähköpostiosoite on automaattisesti luotu ja lähetetty järjestelmämme. Jos olet jo maksanut määrän eli uskovat, että muistutus on virheellinen, lähetä sähköpostia osoitteeseen %{value}. Jos olet tehnyt maksun viimeisen kolmen päivän, jätä tämä muistutus."
+    ticket_payment_complete: Maksu on suoritettu!
     registration_receipt_title: Varauksen vastaanottaminen
     registration_email: Sähköposti
     registration_first_name: Etunimi
