--- a/event/config/locales/ems.ja.yml
+++ b/event/config/locales/ems.ja.yml
@@ -19,6 +19,7 @@ ja:
     ticket_payment_link_text: Make Payment
     ticket_payment_reminder_subject: "Payment Reminder: %{value}"
     ticket_if_already_paid: "This email is automatically generated and sent by our system. If you have already paid the amount, or believe that the reminder is incorrect, please send an email to %{value}. If you have made a payment in the last three days, please ignore this reminder."
+    ticket_payment_complete: お支払いが完了しました!
     registration_receipt_title: 予約受理
     registration_email: Eメール
     registration_first_name: 名
