--- a/core/config/locales/custom.en.yml
+++ b/core/config/locales/custom.en.yml
@@ -20,8 +20,8 @@ en:
   english: "English"
   
   core:
-    next_page: "Next <i class='icon-angle-right'></i>"
-    prev_page: "<i class='icon-angle-left'></i> Previous"
+    next_page: "Next <i class='fa fa-angle-right'></i>"
+    prev_page: "<i class='fa fa-angle-left'></i> Previous"
     login: Login
     logout: Logout
     account: My Account
