--- a/core/config/locales/custom.cs.yml
+++ b/core/config/locales/custom.cs.yml
@@ -18,8 +18,8 @@ cs:
       hhmmpp: "%I:%M %p"
 
   core:
-    next_page: "Další <i class='icon-angle-right'></i>"
-    prev_page: "<i class='icon-angle-left'></i> Předchozí"
+    next_page: "Další <i class='fa fa-angle-right'></i>"
+    prev_page: "<i class='fa fa-angle-left'></i> Předchozí"
     login: Přihlášení
     logout: Odhlášení
     account: Účet
