--- a/event/config/locales/ems.cs.yml
+++ b/event/config/locales/ems.cs.yml
@@ -7,18 +7,18 @@ cs:
     ticket_receipt_attendee: Účastník
     ticket_receipt_departure: Odjezd
     ticket_receipt_event: Událost
-    ticket_receipt_questions: "V případě dalších otázek nás, prosím, kontaktujte na %{value}"
+    ticket_receipt_questions: "V případě dalších otázek nás prosím kontaktujte na %{value}"
     ticket_receipt_questions_telephone: "nebo zatelefonujte %{value}"
     ticket_receipt_ticket_number: Číslo lístku
     ticket_receipt_price: Cena
     ticket_information: Informace o lístku
     ticket_contact: Kontaktní informace
     ticket_registered_following_event: "byl/a jste přihlášen/a na program:"
-    ticket_outstanding_balance: "Podle naší evidence Vám z kurzovného zbývá zaplatit:"
-    ticket_payment_link_leadin: "Tuto částku můžete uhradit některým ze způsobů uvedených na následujícím linku"
+    ticket_outstanding_balance: "Podle naší evidence Vám z kurzovného zbývá uhradit:"
+    ticket_payment_link_leadin: "Tuto částku můžete zaplatit některým ze způsobů uvedených na následujícím linku:"
     ticket_payment_link_text: Způsoby platby
     ticket_payment_reminder_subject: "Připomínka úhrady kurzovného: %{value}"
-    ticket_if_already_paid: "Tento e-mail byl automaticky generovaný a odeslaný naším systémem. Pokud jste výše uvedenou částku již dříve zaplatil/a, nebo se domníváte, že tato připomínka není oprávněná, zašlete prosím e-mail na %{value}. Pokud jste platbu provedli v posledních třech dnech, můžete tuto připomínku ignorovat."
+    ticket_if_already_paid: "Tento e-mail je automaticky generovaný a odeslaný naším systémem. Pokud jste výše uvedenou částku již dříve zaplatil/a, nebo se domníváte, že tato připomínka není oprávněná, zašlete prosím e-mail na %{value}. Pokud jste platbu provedli v posledních třech dnech, můžete tuto připomínku ignorovat."
     ticket_payment_complete: Vaše platba byla dokončena!
     registration_receipt_title: Potvrzení o rezervaci
     registration_email: E-mail
