added language strings per locale

--- a/core/config/locales/custom.cs.yml
+++ b/core/config/locales/custom.cs.yml
@@ -1,4 +1,12 @@
 cs:
+  language:
+    general: Jazyk
+    en: Anglicky
+    de: Německy
+    cs: Česky
+    ja: Japonsky
+    fi: Finnish
+
   date:
     formats:
       ddyy: "%d, %Y"
