--- a/core/config/locales/custom.en.yml
+++ b/core/config/locales/custom.en.yml
@@ -1,4 +1,12 @@
 en:
+  language:
+    general: Language
+    en: English
+    de: German
+    cs: Czech
+    ja: Japanese
+    fi: Finnish
+
   date:
     formats:
       ddyy: "%d, %Y"
