--- a/forum/config/locales/fms.de.yml
+++ b/forum/config/locales/fms.de.yml
@@ -3,34 +3,42 @@ de:
     count_forums:
       zero: "kein Forum"
       one: "1 Forum"
+      few: "%{num} Foren"
       other: "%{num} Foren"
     count_users:
       zero: "kein Benutzer"
       one: "1 Benutzer"
+      few: "%{num} Benutzer"
       other: "%{num} Benutzer"
     count_users_active:
       zero: "kein aktiver Benutzer"
       one: "1 aktiver Benutzer"
+      few: "%{num} aktive Benutzer"
       other: "%{num} aktive Benutzer"
     count_users_lurking:
       zero: "kein nur-lesender Benutzer"
       one: "1 nur-lesender Benutzer"
+      few: "%{num} nur-lesende Benutzer"
       other: "%{num} nur-lesende Benutzer"
     count_voices:
       zero: "kein Teilnehmer"
       one: "1 Teilnehmer"
+      few: "%{num} Teilnehmer"
       other: "%{num} Teilnehmer"
     count_topics:
       zero: "kein Thema"
       one: "1 Thema"
+      few: "%{num} Themen"
       other: "%{num} Themen"
     count_comments:
       zero: "kein Kommentar"
       one: "1 Kommentar"
+      few: "%{num} Kommentare"
       other: "%{num} Kommentare"
     count_comments_found:
       zero: "kein Kommentar gefunden"
       one: "1 Kommentar gefunden"
+      few: "%{count} Kommentare gefunden"
       other: "%{count} Kommentare gefunden"
     comment_age: "vor %{when}"
     user_is_administrator: Administrator
