--- a/newsletter/config/locales/nms.cs.yml
+++ b/newsletter/config/locales/nms.cs.yml
@@ -11,5 +11,6 @@ cs:
     #--- Mailchimp specific errors
     List_DoesNotExist: Uvedené v seznamu neexistuje
     List_AlreadySubscribed: Tento e-mail je již předplatné
+    Email_WasRemoved: The specified email was previously removed, and cannot be resubscribed by the system. To prevent false spam complaints, you'll need to resubscribe of your own free will.
     Email_NotExists: Uvedený e-mail neexistuje
     mc_unknown_error: Unknown Mailchimp error occurred
