--- a/newsletter/config/locales/nms.de.yml
+++ b/newsletter/config/locales/nms.de.yml
@@ -11,5 +11,6 @@ de:
     #--- Mailchimp specific errors
     List_DoesNotExist: Die angegebene Liste existiert nicht
     List_AlreadySubscribed: Diese E-Mail ist bereits abonniert
+    Email_WasRemoved: The specified email was previously removed, and cannot be resubscribed by the system. To prevent false spam complaints, you'll need to resubscribe of your own free will.
     Email_NotExists: Die angegebene E-Mail existiert nicht
     mc_unknown_error: Unknown Mailchimp error occurred
