--- a/newsletter/config/locales/nms.en.yml
+++ b/newsletter/config/locales/nms.en.yml
@@ -11,5 +11,6 @@ en:
     #--- Mailchimp specific errors
     List_DoesNotExist: The specified list does not exist
     List_AlreadySubscribed: This email is already subscribed
+    Email_WasRemoved: The specified email was previously removed, and cannot be resubscribed by the system. To prevent false spam complaints, you'll need to resubscribe of your own free will.
     Email_NotExists: The specified email does not exist
     mc_unknown_error: Unknown Mailchimp error occurred
