--- a/newsletter/config/locales/nms.fi.yml
+++ b/newsletter/config/locales/nms.fi.yml
@@ -11,5 +11,6 @@ fi:
     #--- Mailchimp specific errors
     List_DoesNotExist: Määriteltyä luetteloa ei ole olemassa
     List_AlreadySubscribed: Tämä viesti on jo tilattu
+    Email_WasRemoved: The specified email was previously removed, and cannot be resubscribed by the system. To prevent false spam complaints, you'll need to resubscribe of your own free will.
     Email_NotExists: Määriteltyä viestiä ei ole olemassa
     mc_unknown_error: Tuntematon mailchimp virhe
