--- a/newsletter/config/locales/nms.cs.yml
+++ b/newsletter/config/locales/nms.cs.yml
@@ -13,4 +13,5 @@ cs:
     List_AlreadySubscribed: Tento e-mail je již předplatné
     Email_WasRemoved: The specified email was previously removed, and cannot be resubscribed by the system. To prevent false spam complaints, you'll need to resubscribe of your own free will.
     Email_NotExists: Uvedený e-mail neexistuje
+    Email_TooManySignups: This email has too many recent signup requests
     mc_unknown_error: Unknown Mailchimp error occurred
