--- a/newsletter/config/locales/nms.en.yml
+++ b/newsletter/config/locales/nms.en.yml
@@ -13,4 +13,5 @@ en:
     List_AlreadySubscribed: This email is already subscribed
     Email_WasRemoved: The specified email was previously removed, and cannot be resubscribed by the system. To prevent false spam complaints, you'll need to resubscribe of your own free will.
     Email_NotExists: The specified email does not exist
+    Email_TooManySignups: This email has too many recent signup requests
     mc_unknown_error: Unknown Mailchimp error occurred
