--- a/newsletter/config/locales/nms.ja.yml
+++ b/newsletter/config/locales/nms.ja.yml
@@ -13,4 +13,5 @@ ja:
     List_AlreadySubscribed: このeメールアドレスは既に購読登録されています
     Email_WasRemoved: The specified email was previously removed, and cannot be resubscribed by the system. To prevent false spam complaints, you'll need to resubscribe of your own free will.
     Email_NotExists: このeメールアドレスは存在しません
+    Email_TooManySignups: This email has too many recent signup requests
     mc_unknown_error: 不明なMailchimpのエラーが起こりました
